--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -7,5 +7,5 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/vidio_mangage_db?useSSL=false&useUnicode=true&serverTimezone=UTC&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowPublicKeyRetrieval=true&allowMultiQueries=true
     username: root
-    password: mysql
+    password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
