--- a/src/main/resources/application-pre.yml
+++ b/src/main/resources/application-pre.yml
@@ -8,5 +8,5 @@ spring:
   datasource:
     url: jdbc:mysql://101.132.110.182:3306/video_mangage_db?useSSL=false&useUnicode=true&serverTimezone=UTC&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowPublicKeyRetrieval=true&allowMultiQueries=true
     username: root
-    password: 123456
+    password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
