--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -7,5 +7,5 @@ spring:
   datasource:
     url: jdbc:mysql://192.168.0.69:3306/video_mangage_db?useSSL=false&useUnicode=true&serverTimezone=UTC&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowPublicKeyRetrieval=true&allowMultiQueries=true
     username: root
-    password: 123456
+    password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
